# exsize

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml
.claude/memory/: MEMORY.md  feedback_dev_tooling.md  feedback_sqlite_migrations.md  feedback_tdd_workflow.md  project_issues.md  project_overview.md  project_progress.md  project_techstack.md
.claude/skills/tdd/: SKILL.md
frontend/: index.html  package-lock.json  package.json  wrangler.toml
frontend/public/: offline.html
frontend/src/: App.tsx  api.ts  index.css  offline.test.ts  pwa-config.test.ts  pwa-config.ts  test-setup.ts
frontend/src/components/: AuthModal.test.tsx  AuthModal.tsx  Avatar.tsx  ChildBottomTabBar.test.tsx  ChildBottomTabBar.tsx  ChildTasksTopBar.test.tsx  ChildTasksTopBar.tsx  ParentTopBar.test.tsx  ParentTopBar.tsx
frontend/src/hooks/: useDarkMode.ts  useLoading.test.ts  useLoading.ts
frontend/src/layouts/: AppLayout.test.tsx  AppLayout.tsx
frontend/src/pages/: AdminSettingsPage.test.tsx  AdminSettingsPage.tsx  AvatarItemsPage.test.tsx  AvatarItemsPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  (+20 more)
plans/: exsize-mvp.md
src/exsize/: app.py  app_seed_test.py  database.py  database_test.py  deps.py  models.py  security.py
tests/: conftest.py  test_account.py  test_admin_settings.py  test_auth.py  test_avatar.py  test_dashboard.py  test_deploy_render.py  test_exbucks.py  test_family.py  test_family_leaderboard.py  test_gamification.py  test_global_leaderboard.py  test_nickname.py  test_profile.py  test_rewards.py  test_subscription.py  test_tasks.py
(+14 files in other folders)
