[project]
name = "exsize"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy>=2.0",
    "httpx>=0.28",
    "bcrypt>=4.0",
    "pyjwt>=2.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exsize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
